--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
   <script>
-    cons AS_URL_BASE = "";
+    cons AS_URL_BASE = "https://script.google.com/macros/s/AKfycbyk6BrTTIrafby9R-frnHfyvgSyQrseIntsQeMGo2bFxmdNXJd_7zjEZWqojOKdiT72/exec"; //direrccion del servicio web de google scipts
     
     var url = document.location.href;
     var k = url.substr(url.lastIndexOf("k=")+2); //
